--- a/webui/src/app/home/home.component.html
+++ b/webui/src/app/home/home.component.html
@@ -1,10 +1,40 @@
-<p>
-  home works!
-</p>
-<div *ngIf="this.feedAggregate">
+<!-- <div *ngIf="this.feedAggregate">
   <ul>
     <li *ngFor="let aggregate of this.feedAggregate.aggregateList">
       {{ aggregate.title }}
     </li>
   </ul>
+</div> -->
+<div>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+
+      <ng-container matColumnDef="feed">
+        <th mat-header-cell *matHeaderCellDef> Feed </th>
+        <td mat-cell *matCellDef="let element">
+          <div class="feedElement" (click)="redirectToSource(element.link)">
+            <p><b>{{element.title}} &nbsp; <span style="color: dimgrey">{{this.getDomainFromUrl(element.link)}}</span></b></p>
+            <p class="description">{{element.description}}</p>
+          </div>
+        </td>
+      </ng-container>
+
+      <!-- Position Column -->
+      <!-- <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Title </th>
+        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+      </ng-container> -->
+
+      <!-- Name Column -->
+      <!-- <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container> -->
+
+      <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[10, 50, 100, 200]" showFirstLastButtons></mat-paginator>
+  </div>
 </div>
