--- a/webui/src/app/home/home.component.html
+++ b/webui/src/app/home/home.component.html
@@ -14,6 +14,7 @@
         <td mat-cell *matCellDef="let element">
           <div class="feedElement" (click)="redirectToSource(element.link)">
             <p><b>{{element.title}} &nbsp; <span style="color: dimgrey">{{this.getDomainFromUrl(element.link)}}</span></b></p>
+            <p class="description">{{element.pubDate | date}}</p>
             <p class="description">{{element.description}}</p>
           </div>
         </td>
